# CMake_Test

./: CMakeLists.txt  CMakeSettings.json  CMake_VS_Testing2.cpp  CMake_VS_Testing2.h  README.md
apps/: CMakeLists.txt  main.cpp  main_config.h.in
hello/: CMakeLists.txt
hello/include/: hello.h
hello/src/: hello.cpp
object/: CMakeLists.txt
object/include/: object.h
object/src/: object.cpp
tests/: CMakeLists.txt  main_Test.cpp  objectTest.cpp  objectTest.h  object_Test.cpp
